--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
     <head>
     </head>
     <body>
-        <!-- 
-        Challenge 1:
         Write the HTML for your personal website.
         -->
-        <img src="per.jpg">
-        <h1>Hi, my name is Per</h1>
-        <h2>Fun facts about me:</h2>
+     
+        <img src="ajimage.jpg" width="100PX">
+        <h1>Hi, My Name is Akhand Jaiswal</h1>
+        <h2>Facts about Me:</h2>
         <ul>
-            <li>36 years old</li>
-            <li>Live in Norway</li>
-            <li>Sing in a choir</li>
+            <li>24 years old</li>
+            <li>Live in India</li>
+            <li>I always Break my Own Limit</li>
         </ul>
-        <p>Please connect with me on <a href="https://www.linkedin.com/in/per-harald-borgen/" taget="_blank">LinkedIn here.</a></p>
-        <input type="text" placeholder="Enter email...">
-        <button>Join newsletter</button>
+        <p>Please connect with me on <a href="https://www.linkedin.com/in/akhand-jaiswal/" taget="_blank">LinkedIn here.</a></p>
+        <input type="text" placeholder="Enter Your Email.">
+        <button>Join Newsletter</button>
     </body>
 </html>
